@@ -401,6 +401,22 @@ name|r
 init|=
 literal|null
 decl_stmt|;
+name|HRegionServer
+name|server
+init|=
+name|cluster
+operator|.
+name|getRegionThreads
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getRegionServer
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -416,6 +432,8 @@ name|i
 operator|++
 control|)
 block|{
+try|try
+block|{
 name|hri
 operator|=
 name|t
@@ -430,6 +448,29 @@ operator|.
 name|getRegionInfo
 argument_list|()
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|e
+operator|=
+name|RemoteExceptionHandler
+operator|.
+name|checkIOException
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+name|e
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
+continue|continue;
+block|}
 name|LOG
 operator|.
 name|info
@@ -441,18 +482,7 @@ argument_list|)
 expr_stmt|;
 name|r
 operator|=
-name|cluster
-operator|.
-name|getRegionThreads
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|getRegionServer
-argument_list|()
+name|server
 operator|.
 name|onlineRegions
 operator|.
@@ -500,19 +530,13 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|// Flush the cache
-name|cluster
-operator|.
-name|getRegionThreads
-argument_list|()
-operator|.
-name|get
+name|assertNotNull
 argument_list|(
-literal|0
+name|r
 argument_list|)
-operator|.
-name|getRegionServer
-argument_list|()
+expr_stmt|;
+comment|// Flush the cache
+name|server
 operator|.
 name|getCacheFlushListener
 argument_list|()
@@ -796,9 +820,9 @@ expr_stmt|;
 if|if
 condition|(
 name|data
-operator|==
+operator|!=
 literal|null
-operator|||
+operator|&&
 name|data
 operator|.
 name|size
@@ -807,6 +831,13 @@ operator|==
 literal|3
 condition|)
 block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Waiting for splitA to release reference to parent"
+argument_list|)
+expr_stmt|;
 try|try
 block|{
 name|Thread
@@ -829,6 +860,13 @@ continue|continue;
 block|}
 break|break;
 block|}
+if|if
+condition|(
+name|data
+operator|!=
+literal|null
+condition|)
+block|{
 name|LOG
 operator|.
 name|info
@@ -844,6 +882,7 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
@@ -984,8 +1023,26 @@ name|parentDir
 argument_list|)
 condition|)
 block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Parent directory was deleted. tries="
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
 break|break;
 block|}
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Waiting for parent directory to be deleted. tries="
+operator|+
+name|i
+argument_list|)
+expr_stmt|;
 try|try
 block|{
 name|Thread
@@ -1294,17 +1351,11 @@ operator|.
 name|getRegionName
 argument_list|()
 operator|.
-name|toString
-argument_list|()
-operator|.
 name|equals
 argument_list|(
 name|parent
 operator|.
 name|getRegionName
-argument_list|()
-operator|.
-name|toString
 argument_list|()
 argument_list|)
 operator|&&
@@ -1587,17 +1638,11 @@ operator|.
 name|getRegionName
 argument_list|()
 operator|.
-name|toString
-argument_list|()
-operator|.
 name|equals
 argument_list|(
 name|r
 operator|.
 name|getRegionName
-argument_list|()
-operator|.
-name|toString
 argument_list|()
 argument_list|)
 condition|)
