@@ -139,6 +139,20 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|FileStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|FileSystem
 import|;
 end_import
@@ -642,6 +656,16 @@ operator|*
 literal|1024
 argument_list|)
 expr_stmt|;
+comment|// Always compact if there is more than one store file.
+name|conf
+operator|.
+name|setInt
+argument_list|(
+literal|"hbase.hstore.compactionThreshold"
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
 name|desc
 operator|=
 operator|new
@@ -919,11 +943,6 @@ argument_list|(
 name|printResults
 argument_list|)
 expr_stmt|;
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"deprecation"
-argument_list|)
 name|MiniMRCluster
 name|mrCluster
 init|=
@@ -1488,20 +1507,15 @@ argument_list|(
 name|conf
 argument_list|)
 decl_stmt|;
-name|Path
+name|FileStatus
 index|[]
 name|indexDirs
 init|=
 name|localfs
 operator|.
-name|listPaths
+name|listStatus
 argument_list|(
-operator|new
-name|Path
-index|[]
-block|{
 name|localDir
-block|}
 argument_list|)
 decl_stmt|;
 name|Searcher
@@ -1538,6 +1552,9 @@ name|indexDirs
 index|[
 literal|0
 index|]
+operator|.
+name|getPath
+argument_list|()
 operator|.
 name|toUri
 argument_list|()
@@ -1604,6 +1621,9 @@ name|indexDirs
 index|[
 name|i
 index|]
+operator|.
+name|getPath
+argument_list|()
 operator|.
 name|toUri
 argument_list|()
@@ -1756,18 +1776,6 @@ operator|.
 name|toString
 argument_list|()
 decl_stmt|;
-name|LOG
-operator|.
-name|debug
-argument_list|(
-literal|"Scanned over "
-operator|+
-name|key
-operator|.
-name|getRow
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|Term
 name|term
 init|=
