@@ -265,6 +265,22 @@ name|hbase
 operator|.
 name|io
 operator|.
+name|BatchUpdate
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|io
+operator|.
 name|ImmutableBytesWritable
 import|;
 end_import
@@ -588,7 +604,7 @@ name|setLong
 argument_list|(
 literal|"hbase.hregion.max.filesize"
 argument_list|,
-literal|256
+literal|1024
 operator|*
 literal|1024
 argument_list|)
@@ -809,7 +825,7 @@ argument_list|,
 name|MapWritable
 argument_list|>
 block|{
-comment|/**      * Pass the key, and reversed value to reduce      *      * @see org.apache.hadoop.hbase.mapred.TableMap#map(org.apache.hadoop.hbase.HStoreKey, org.apache.hadoop.io.MapWritable, org.apache.hadoop.hbase.mapred.TableOutputCollector, org.apache.hadoop.mapred.Reporter)      */
+comment|/**      * Pass the key, and reversed value to reduce      *      * @see org.apache.hadoop.hbase.mapred.TableMap#map(org.apache.hadoop.hbase.HStoreKey, org.apache.hadoop.io.MapWritable, org.apache.hadoop.mapred.OutputCollector, org.apache.hadoop.mapred.Reporter)      */
 annotation|@
 name|SuppressWarnings
 argument_list|(
@@ -1142,12 +1158,11 @@ name|i
 operator|++
 control|)
 block|{
-name|long
-name|lockid
+name|BatchUpdate
+name|b
 init|=
-name|table
-operator|.
-name|startUpdate
+operator|new
+name|BatchUpdate
 argument_list|(
 operator|new
 name|Text
@@ -1165,14 +1180,10 @@ argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
-try|try
-block|{
-name|table
+name|b
 operator|.
 name|put
 argument_list|(
-name|lockid
-argument_list|,
 name|TEXT_INPUT_COLUMN
 argument_list|,
 name|values
@@ -1185,37 +1196,9 @@ name|table
 operator|.
 name|commit
 argument_list|(
-name|lockid
-argument_list|,
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
+name|b
 argument_list|)
 expr_stmt|;
-name|lockid
-operator|=
-operator|-
-literal|1
-expr_stmt|;
-block|}
-finally|finally
-block|{
-if|if
-condition|(
-name|lockid
-operator|!=
-operator|-
-literal|1
-condition|)
-name|table
-operator|.
-name|abort
-argument_list|(
-name|lockid
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 name|LOG
 operator|.
